use flexbox to wrap settings tiles correctly new icon for different tags ignore test files in codeclimate test

--- a/src/elements/InfoHeaderItem/InfoHeaderItem.module.css
+++ b/src/elements/InfoHeaderItem/InfoHeaderItem.module.css
@@ -2,10 +2,15 @@
 .infoheaderitem {
     background-color: lightblue;
     border-radius: 5px;
-    float: left;
-    height: 130px;
+    flex: calc(25% - 10px);
     margin: 5px;
-    width: calc(25% - 10px);
+}
+
+/* On screens that are 1317px wide or less, go from four columns to two columns */
+@media screen and (max-width: 1317px) {
+    .infoheaderitem {
+        flex: calc(50% - 10px);
+    }
 }
 
 /* change opacity of icon when hovering whole tile */
@@ -23,7 +28,7 @@
     float: left;
     height: 130px;
     margin-left: 5px;
-    margin-right: 10px;
+    margin-right: 17px;
     margin-top: 20px;
     opacity: 0.5;
     text-align: center;
